--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@
 }
 
 .btn button:hover {
-    background-color: #cfdbe4;
+    background-image: linear-gradient(115deg, #8bbfe4, #c1d2df);
 }
 
 .container {
@@ -66,7 +66,6 @@
 
 .card hr {
     width: 80%;
-    border: 1px dashed rgb(184, 224, 229);
 }
 
 .card button {
