--- a/style.css
+++ b/style.css
@@ -2,14 +2,29 @@
     font-family: Helvetica, sans-serif;
 }
 
+input {
+    border: none;
+    color: inherit;
+    font-family: inherit;
+    font-size: inherit;
+    font-weight: inherit;
+    cursor: pointer;
+    outline: none;
+}
+
+input[type='text'],
+input[type='number'] {
+    cursor: text;
+}
+
 .header {
     display: flex;
     align-items: center;
     padding-left: 120px;
     height: 100px;
     background-color: #2185D5;
-
 }
+
 .header h1 {
     color: #e0eaf2;
     font-size: 36px;
@@ -62,6 +77,7 @@
     color: #e1e8ee;
     font-weight: 300;
     padding: 5px;
+    margin-bottom: 26px;
 }
 
 .card hr {
@@ -74,4 +90,114 @@
     border: none;
     cursor: pointer;
     width: 100%;
+}
+
+/**************************/
+
+.modal {
+    position: fixed;
+    z-index: 1;
+    top: 50%;
+    left: 50%;
+    width: 300px;
+    text-align: center;
+    transform: translate(-50%, -50%) scale(0);
+    transition: 0.2s ease-in-out;
+}
+
+.modal.active {
+    transform: translate(-50%, -50%) scale(1);
+}
+
+.add-book-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #85bfee;
+    padding: 25px;
+    border-radius: 20px;
+}
+
+.add-book-form button {
+    width: 100%;
+    border-radius: 20px;
+    border: solid 1px #0d4471;
+}
+
+.error-msg {
+    display: none;
+    color: red;
+}
+
+.error-msg.active {
+    display: block;
+    margin-top: -15px;
+}
+
+.input {
+    width: 100%;
+    padding: 10px;
+    border-radius: 6px;
+    padding: 12px;
+    margin-top: 8px;
+}
+
+.is-read {
+    display: flex;
+    padding: 12px;
+    align-items: center;
+}
+
+.checkbox {
+    width: 20px;
+    height: 20px;
+    margin-top: 4px;
+    accent-color: white;
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: none;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.overlay.active {
+    display: block;
+}
+
+  /* LOADING RING */
+
+.lds-dual-ring {
+    display: none;
+    width: 38px;
+    height: 38px;
+}
+
+.lds-dual-ring:after {
+    content: ' ';
+    display: block;
+    width: 30px;
+    height: 30px;
+    margin: 8px;
+    border-radius: 50%;
+    border: 3px solid var(--black);
+    border-color: var(--black) transparent var(--black) transparent;
+    animation: lds-dual-ring 1.2s linear infinite;
+}
+
+.lds-dual-ring.active {
+    display: block;
+}
+
+@keyframes lds-dual-ring {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
 }
